<resources>
    <string name="app_name">MathSpill</string>
    <string name="start_spill">Start Spill</string>
    <string name="se_statistikk">Statistikk</string>
    <string name="preferanser">Preferanse</string>
    <string name="riktig">Riktig </string>
    <string name="riktigPoeng">Riktig : +1</string>
    <string name="galt">Galt </string>
    <string name="galtPoeng">Galt : +1</string>
    <string name="buttonSlett">SLETT</string>
    <string name="buttonSvar">SVAR</string>
    <string name="mainLogo">MATHSPILL</string>
    <string name="prefereseTekst">Velg antall spørsmål</string>
    <string name="easyKnapp">LETT-5</string>
    <string name="mediumKnapp">MEDIUM-10</string>
    <string name="hardKnapp">HARD-25</string>
    <string name="exit">Exit</string>
    <string name="exit_tekst">Vil du gå ut av spillet? Svarene dine vil ikke bli lagret!</string>
    <string name="exit_tekst_result">Vil du gå ut av spillet?</string>
    <string name="avslutt">Avslutt</string>
    <string name="avbryt">Avbryt</string>
    <string name="resultat">Resultat</string>
    <string name="restart">Prøv igjen</string>
    <string name="main_menu">Hovedmeny</string>
    <string name="norsk">Norsk</string>
    <string name="german">Tysk</string>
    <string name="language">Velg språk</string>
    <string name="slettText">Slett historikk</string>
    <string name="validering">Du må oppgi et svar!</string>
    <string name="nullText">0</string>


</resources>
