<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundresult"
    android:orientation="vertical"
    tools:context=".Resultat">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultat"
        android:textAlignment="center"
        android:textSize="42dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:paddingLeft="30dp">

            <com.example.bas.livssyklus.GifImage
                android:id="@+id/gifImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/giphy" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:paddingRight="30dp">

            <com.example.bas.livssyklus.GifImage
                android:id="@+id/GifImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/giphy" />
        </FrameLayout>
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="181dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/riktigText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/special_elite"
                android:text="@string/riktig"
                android:textAlignment="center"
                android:textSize="22sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <TextView
                android:id="@+id/riktig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shojumaru"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/galtText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/special_elite"
                android:text="@string/galt"
                android:textAlignment="center"
                android:textSize="22sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/galt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shojumaru"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/restartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restart" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/mainMenuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_menu" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>