<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hovedBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:fontFamily="@font/shojumaru"
            android:text="@string/mainLogo"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadingEdge="horizontal|vertical"
                android:fadingEdgeLength="100dp"
                android:requiresFadingEdge="horizontal|vertical"
                app:srcCompat="@drawable/maths" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/spillRad"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <Button
                android:id="@+id/spillKnapp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/shojumaru"
                android:text="@string/start_spill"
                android:textAlignment="center"
                android:textColor="#185953"
                android:textSize="22sp" />

        </TableRow>

        <TableRow
            android:id="@+id/statistikkRad"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <Button
                android:id="@+id/statistikkKnapp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/shojumaru"
                android:text="@string/se_statistikk"
                android:textAlignment="center"
                android:textColor="#185953"
                android:textSize="22sp" />

        </TableRow>

        <TableRow
            android:id="@+id/preferanserRad"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <Button
                android:id="@+id/preferanserKnapp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/shojumaru"
                android:text="@string/preferanser"
                android:textAlignment="center"
                android:textColor="#185953"
                android:textSize="22sp" />

        </TableRow>
    </LinearLayout>
</RelativeLayout>